src/App.sass
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;500&display=swap')

// Variables & Mixins ----------------------------  
$color-red: #fc6b6b
$font-main: 'Work Sans', sans-serif
$width-sm: 640px
// Transitions
$hover: all .2s ease-in-out
// Animations
$fade-in: fade-in .5s ease-in

// Animation - loader
@keyframes lds-roller 
  0% 
    transform: rotate(0deg)
  
  100% 
    transform: rotate(360deg)  

// Animation - fade in
@keyframes fade-in
  0%
    opacity: 0
  100%
    opacity: 1
  
@mixin fade-in-animation
  animation: $fade-in

@mixin transition($property)
  -webkit-transition: $property
  -ms-transition: $property
  transition: $property

// light theme styles
@mixin light-theme
  --text-color: #282c34
  --bg-color: #fafafa
  --btn-text-color: #282c34
  --btn-bg-color: #61dafb
  --btn-hover-color: #47cbf0
  --border-color: #c9c9c9

// dark theme styles
@mixin dark-theme
  --text-color: #61dafb
  --bg-color: #282c34
  --btn-text-color: #282c34
  --btn-bg-color: #61dafb
  --btn-hover-color: #47cbf0
  --border-color: #fafafa

:root
  @include dark-theme
  
  // allows toggle to light theme
  &.light
    @include light-theme


// Styles ----------------------------
*
  margin: 0
  padding: 0
  box-sizing: border-box

html,body
  height: 100%

body
  background: var(--bg-color)
  color: var(--text-color)
  font-family: $font-main
  font-size: 16px
  text-align: center
  line-height: 1.4

h1
  font-size: 2.5em
  font-weight: 500
  margin: 0 auto 1em
  
  @media screen and (max-width: $width-sm)
    font-size: 1.75em

h2
  margin-bottom: 1em
    
p
  font-weight: 300
  font-size: 1em
  
  &:first-of-type
    margin-bottom: .5em

  &.tiny
    font-size: 0.875em

a
  color: var(--text-color)
  
hr
  width: 100%
  border: 0
  border-bottom: 1px dashed var(--border-color)
  margin-bottom: 2em

header
  padding: 1.5em 1em

  button.btn-theme
    width: auto
    position: absolute
    right: 1em
    top: 1em
    margin-top: 0
    font-size: .8em

    @media screen and (max-width: $width-sm)
      right: 1.3em
      top: 6em

nav 
  border-bottom: 1px solid
  padding-bottom: 1em
  
  ul
    list-style: none
    max-width: 400px
    display: flex
    justify-content: space-between

    @media screen and (max-width: $width-sm)
      width: 100%
      font-size: .9em

    a
      font-weight: 300
      text-decoration: none

      &:hover
        text-decoration: underline

      &.active 
        font-weight: 500
        text-decoration: underline

footer
  margin-bottom: 3em
  
main
  height: 100%
  max-width: 500px
  margin: 10vh auto
  padding: 0 1em

.wrapper
  margin: 5% auto

form
  width: 100%

  p.required 
    color: $color-red
    text-align: left
    margin: -0.75em 0 1em 0
        
label
  display: block
  text-align: left
  
input, select, textarea
  background: white
  width: 100%
  margin: .25em auto 1em
  border: none
  border-radius: 4px
  padding: 12px
  font-family: $font-main
  font-weight: 300
  font-size: 1em
  border: 1px solid var(--border-color)
  
input[type="checkbox"]
  margin: 0 8px 0 0
  width: initial
    
button
  width: 100%
  background: var(--btn-bg-color)
  color: var(--btn-text-color)
  font-family: $font-main
  font-size: 1em
  margin: .5em auto 1em
  padding: .75em 1em
  border: none
  border-radius: 4px
  cursor: pointer
  @include transition($hover)

  &:hover
    background: var(--btn-hover-color)
  
  &:disabled
    cursor: default
    background: lightgrey
    color: grey

  &.btn-delete
    margin: -2px 0 0 10px
    padding: 0
    background: none
    color: var(--btn-bg-color)
    font-size: 26px
    font-weight: 300
    line-height: 1
    flex-basis: 10%

    &:hover
      color: $color-red

main ul
  width: 100%
  padding: .5em 0
  font-weight: 300
  list-style: none
  text-align: left
  
  li
    display: block
    margin-bottom: .75em
    padding: 0 .75em .75em .5em
    border-bottom: 1px dashed var(--border-color)

    div
      display: inline-flex
      align-items: center
      text-align: left
      
    label
      flex-basis: 100%
      margin: 0 0 0 8px

// Map styles
.map-wrapper
  position: relative
  border-top: 2px solid white
  max-width: 500px
  margin: 2em auto

  @media screen and (max-width: $width-sm)
    width: 330px

.map-container 
  height: 300px

.sidebar
  background-color: rgba(35, 55, 75, 0.9) 
  color: #fff 
  padding: 6px 12px 
  z-index: 1 
  position: absolute 
  top: 0 
  left: 0 
  margin: 12px 
  border-radius: 4px 

// Cat Pics
.wrapper.cat
  max-width: 400px

  img
    height: 30vh
    @include fade-in-animation

    @media screen and (max-width: $width-sm)
      height: 28vh

  button
    display: block
    width: 220px
    margin: 1em auto

// Fav Color
.wrapper.favColor,.wrapper.rain
  width: 100%

// Rain
.wrapper.rain
  margin-top: 0

// Loader styles - https://loading.io/css/
.lds-roller 
  display: inline-block
  position: relative
  width: 80px
  height: 80px

  div 
    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite
    transform-origin: 40px 40px

    &:after 
      content: " "
      display: block
      position: absolute
      width: 7px
      height: 7px
      border-radius: 50%
      background: #fff
      margin: -4px 0 0 -4px

  div:nth-child(1) 
    animation-delay: -0.036s

    &:after 
      top: 63px
      left: 63px

  div:nth-child(2) 
    animation-delay: -0.072s

    &:after 
      top: 68px
      left: 56px

  div:nth-child(3) 
    animation-delay: -0.108s

    &:after 
      top: 71px
      left: 48px

  div:nth-child(4) 
    animation-delay: -0.144s

    &:after 
      top: 72px
      left: 40px

  div:nth-child(5) 
    animation-delay: -0.18s

    &:after 
      top: 71px
      left: 32px

  div:nth-child(6) 
    animation-delay: -0.216s

    &:after 
      top: 68px
      left: 24px

  div:nth-child(7) 
    animation-delay: -0.252s

    &:after 
      top: 63px
      left: 17px

  div:nth-child(8) 
    animation-delay: -0.288s

    &:after 
      top: 56px
      left: 12px

